--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.wpic.maven</groupId>
+    <groupId>com.github.wpic</groupId>
     <artifactId>coffeescript-maven-plugin</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
